8202465: [C1] casts should not be eliminated for interface types

Reviewed-by: jrose, thartmann